...
    <string name="url_facebook">https://www.facebook.com/psoegaldar</string>
    <string name="link_twitter">Twitter</string>
    <string name="url_twitter">https://twitter.com/psoegaldar</string>
    <string name="link_youtube">Youtube</string>
    <string name="url_youtube">https://www.youtube.com/user/PSOEGALDAR</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="html_prefix"><![CDATA[<html><head>
...
